Автоматически сгенерирован класс клиента CityPharmacyChainApi на основе документации OpenApi в формате JSON. Добавлен класс CityPharmacyChainApiWrapper, являющийся обёрткой над классом CityPharmacyChainApi.
